--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <label for="birthday">Enter your D.O.B</label>
             <input type="date" name="birthday" id="birthday">
             <button id="btnAge">Calculate Age</button>
-            <p id="result">Your Age is 40 Years Old</p>
+            <p id="result"></p>
         </div>
     </div>
     <script src="script.js"></script>
